workspace-sf/force-app/main/default/objects/FavorecidoRemuneracao__c/FavorecidoRemuneracao__c.object-meta.xml
<CustomObject>
    <description>Objeto de relacionamento entre a conta e remuneração do parceiro</description>
    <label>Favorecido da remuneração</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Número</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Favorecidos da remuneração</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>