workspace-sf/force-app/main/default/objects/FavorecidoRemuneracao__c/fields/DadosCorretor__c.field-meta.xml
<CustomField>
    <fullName>DadosCorretor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Código susep do corretor na Cia</inlineHelpText>
    <label>Dados do corretor</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.Conta__c</field>
            <operation>equals</operation>
            <valueField>DadosCorretor__c.NomeCorretor__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>DadosCorretor__c</referenceTo>
    <relationshipLabel>Favorecidos da remuneração</relationshipLabel>
    <relationshipName>FavorecidosRemuneracao</relationshipName>
    <type>Lookup</type>
</CustomField>