workspace-sf/force-app/main/default/objects/FavorecidoRemuneracao__c/fields/InformacaoBancaria__c.field-meta.xml
<CustomField>
    <fullName>InformacaoBancaria__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Informação bancária</label>
    <referenceTo>InformacaoBancaria__c</referenceTo>
    <relationshipLabel>Favorecidos da remuneração</relationshipLabel>
    <relationshipName>FavorecidosRemuneracao</relationshipName>
    <type>Lookup</type>
</CustomField>