workspace-sf/force-app/main/default/objects/FavorecidoRemuneracao__c/fields/Lider__c.field-meta.xml
<CustomField>
    <fullName>Lider__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Líder</label>
    <type>Checkbox</type>
</CustomField>