workspace-sf/force-app/main/default/objects/FavorecidoRemuneracao__c/fields/RemuneracaoProdutoParceiro__c.field-meta.xml
<CustomField>
    <fullName>RemuneracaoProdutoParceiro__c</fullName>
    <label>Remuneração do produto do parceiro</label>
    <referenceTo>RemuneracaoProdutoParceiro__c</referenceTo>
    <relationshipLabel>Favorecidos da remuneração</relationshipLabel>
    <relationshipName>FavorecidosRemuneracao</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>