workspace-sf/force-app/main/default/objects/FavorecidoRemuneracao__c/validationRules/PreencherDadosBancarios.validationRule-meta.xml
<ValidationRule>
    <fullName>PreencherDadosBancarios</fullName>
    <active>true</active>
    <description>Regra para permitir o preenchimento dos dados bancários para qualquer remuneração que não seja &quot;Corretagem&quot;</description>
    <errorConditionFormula>AND(
	RemuneracaoProdutoParceiro__r.TipoRemuneracao__r.Name  != &quot;Corretagem&quot;,
ISBLANK(InformacaoBancaria__c)
)</errorConditionFormula>
    <errorDisplayField>InformacaoBancaria__c</errorDisplayField>
    <errorMessage>Este campo deve ser preenchido para este tipo de remuneração</errorMessage>
</ValidationRule>