workspace-sf/force-app/main/default/objects/FavorecidoRemuneracao__c/validationRules/ValidarComposicaoBancaria.validationRule-meta.xml
<ValidationRule>
    <fullName>ValidarComposicaoBancaria</fullName>
    <active>true</active>
    <errorConditionFormula>TEXT(InformacaoBancaria__r.StatusIntegracao__c)  =  &apos;Não validada&apos;</errorConditionFormula>
    <errorDisplayField>InformacaoBancaria__c</errorDisplayField>
    <errorMessage>Informações bancárias invalidas</errorMessage>
</ValidationRule>