workspace-sf/force-app/main/default/objects/FavorecidoRemuneracao__c/validationRules/ValidarDadosCorretorParaOPapelCorretor.validationRule-meta.xml
<ValidationRule>
    <fullName>ValidarDadosCorretorParaOPapelCorretor</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(Papel__c, &apos;Corretor&apos;) &amp;&amp; ISBLANK(DadosCorretor__c)</errorConditionFormula>
    <errorDisplayField>DadosCorretor__c</errorDisplayField>
    <errorMessage>Para o papel Corretor, informar os dados do corretor</errorMessage>
</ValidationRule>