workspace-sf/force-app/main/default/objects/FavorecidoRemuneracao__c/validationRules/ValidarDadosCorretorParaOutrosPapeis.validationRule-meta.xml
<ValidationRule>
    <fullName>ValidarDadosCorretorParaOutrosPapeis</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    NOT(ISBLANK(DadosCorretor__c)), 
    NOT(ISPICKVAL(Papel__c, &apos;Corretor&apos;))
)</errorConditionFormula>
    <errorDisplayField>DadosCorretor__c</errorDisplayField>
    <errorMessage>Só é possível informar dados do corretor para o papel corretor</errorMessage>
</ValidationRule>